--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* This is a new commit */
 .item {
   margin: 5px;
   padding: 20px 35px;
@@ -265,6 +266,6 @@ body {
   height: auto;
 }
 
-.main-sec6-div p{ 
+.main-sec6-div p {
   color: #8c8a88;
 }
